# alt-test-task

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: cliApp.hpp  jsonMapper.hpp
app/src/: cliApp.cpp  jsonMapper.cpp  main.cpp
